<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/businessInfo_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_main">

        <ImageView
            android:id="@+id/businessInfo_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/businessInfo"
            android:textColor="@color/color_white"
            android:textSize="18dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/business_liner"
        android:layout_below="@+id/businessInfo_title">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/businessInfo_img"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/business_nz_fz1" />

            <TextView
                android:id="@+id/businessInfo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/businessInfo_img"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="8dp"
                android:text="书法家和圣诞节快发货单上尽快发货房间看电视费"
                android:textColor="@color/color_black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/businessInfo_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/businessInfo_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="8dp"
                android:text="$ 198.00"
                android:textColor="@color/color_main"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_reduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/businessInfo_name"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/count_liner"
                android:src="@mipmap/icon_reduce" />

            <LinearLayout
                android:id="@+id/count_liner"
                android:layout_toLeftOf="@+id/icon_add"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_below="@+id/businessInfo_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_counts"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_bus_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00ffffff"
                    android:ems="2"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1"
                    android:textSize="16dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/icon_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/businessInfo_name"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_add" />
        </RelativeLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/business_liner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/businessInfo_collect"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/color_background">

            <TextView
                android:id="@+id/text_bus_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/businesscollect"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/businessInfo_car"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/color_fd9301">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/businessCar"
                android:textColor="@color/color_white"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/businessInfo_buy"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/color_fe4f00">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/businessBuy"
                android:textColor="@color/color_white"
                android:textSize="18dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>